--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 sv_maxplayers ${MAX_PLAYERS};
 steam_server_heartbeat_enabled ${STEAM_HEARTBEAT};
-sv_hostname "${HOSTNAME}";
+sv_hostname "${SERVER_HOSTNAME}";
 sv_port ${PORT};
 steam_server_query_port ${STEAM_QUERY_PORT};
 steam_server_steam_port ${STEAM_SERVER_PORT};
