--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - MAX_PLAYERS=${MAX_PLAYERS:-4}
       - STEAM_HEARTBEAT=${STEAM_HEARTBEAT:-1}
-      - HOSTNAME=${HOSTNAME:-Risk of Rain 2 Dedicated Server}
+      - SERVER_HOSTNAME=${SERVER_HOSTNAME:-Risk of Rain 2 Dedicated Server}
       - PORT=${PORT:-27015}
       - STEAM_QUERY_PORT=${STEAM_QUERY_PORT:-27016}
       - STEAM_SERVER_PORT=${STEAM_SERVER_PORT:-0}
